right orientation boxes collapse fix
when shrinking browser window the images would stretch not shrink correctly. fixed this here by creating a new div box around img and setting width of box to proportions and width of img to 100%.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -306,12 +306,18 @@ main .main-container {
 
     .right-orientation-box {
         display: flex;
+        flex-direction: row;
         padding: 0.88rem 0.88rem;
     }
 
-    .right-orientation-box img {
+    .right-orientation-image {
+      
         height: auto;
         width: 35%;
+    }
+
+    .right-orientation-box img {
+        width: 100%;
     }
 
     .right-orientation-text {
